// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage renders 1`] = `
<div>
  <div
    class="login-page"
  >
    <div
      class="login-section"
    >
      <h2
        class="login-page-title"
      >
        Log in
      </h2>
      <form
        class="login-page-form"
      >
        <div
          class="form-group username"
        >
          <label
            class="input-label"
            for="username"
          >
            Username
          </label>
          <input
            class="input"
            name="username"
            pattern="[a-zA-Z0-9]{3,}"
            placeholder="OlaNordmann"
            required=""
            title="At least 3 characters: a-z, A-Z, 0-9."
            value=""
          />
        </div>
        <div
          class="form-group password"
        >
          <label
            class="input-label"
            for="password"
          >
            Password
          </label>
          <input
            class="input"
            disabled=""
            name="password"
            placeholder="Password"
            type="password"
          />
        </div>
        <div
          class="form-group"
        />
        <button
          class="login-button"
          type="submit"
        >
          Log in
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`My Connected React-Redux Component should render with given state from Redux store 1`] = `
<div
  className="login-page"
>
  <div
    className="login-section"
  >
    <h2
      className="login-page-title"
    >
      Log in
    </h2>
    <form
      className="login-page-form"
      onSubmit={[Function]}
    >
      <div
        className="form-group username"
      >
        <label
          className="input-label"
          htmlFor="username"
        >
          Username
        </label>
        <input
          autoFocus={true}
          className="input"
          name="username"
          onChange={[Function]}
          pattern="[a-zA-Z0-9]{3,}"
          placeholder="OlaNordmann"
          required={true}
          title="At least 3 characters: a-z, A-Z, 0-9."
          value=""
        />
      </div>
      <div
        className="form-group password"
      >
        <label
          className="input-label"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          disabled={true}
          name="password"
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="form-group"
      />
      <button
        className="login-button"
        type="submit"
      >
        Log in
      </button>
    </form>
  </div>
</div>
`;
